--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nodets",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/server.ts",
@@ -19,5 +18,14 @@
     "@types/express": "^4.17.17",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Matheus-J-Balan/Prgramacao_WEB_UniCesumar.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Matheus-J-Balan/Prgramacao_WEB_UniCesumar/issues"
+  },
+  "homepage": "https://github.com/Matheus-J-Balan/Prgramacao_WEB_UniCesumar#readme",
+  "description": ""
 }
